adjust and remove tree-kill

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "time": "5000",
+    "tol": "4000",
     "video_path": "/home/tinker/bbb-3840x2160-cfg02.mkv",
-    "audio_path": "pulsesrc device=alsa_output.OnBoard_D2.monitor"
+    "audio_path": "filesrc location=bbb-3840x2160-cfg02.m4a ! decodebin"
 }
